kubernetes/ingress-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx-app
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.13.12
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-app
  name: nginx-svc
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: nginx-app

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginxsvc-ingress
spec:
  rules:
  - host: nginx.my-domain.com
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
